--- a/untlambda.cabal
+++ b/untlambda.cabal
@@ -19,6 +19,6 @@ executable untlambda
   main-is:             untyped.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6, parsec
+  build-depends:       base >=4.6, parsec, mtl
   -- hs-source-dirs:      
   default-language:    Haskell2010
