--- a/untlambda.cabal
+++ b/untlambda.cabal
@@ -22,3 +22,11 @@ executable untlambda
   build-depends:       base >=4.6, parsec
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+executable typed
+  main-is:             typed.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.6, parsec
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
