--- a/untlambda.cabal
+++ b/untlambda.cabal
@@ -30,3 +30,11 @@ executable typed
   build-depends:       base >=4.6, parsec
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+executable typedrec
+  main-is:             typedrec.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.6, parsec
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
