--- a/untlambda.cabal
+++ b/untlambda.cabal
@@ -35,6 +35,6 @@ executable typedrec
   main-is:             typedrec.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6, parsec
+  build-depends:       base >=4.6, parsec, readline
   -- hs-source-dirs:      
   default-language:    Haskell2010
