--- a/untlambda.cabal
+++ b/untlambda.cabal
@@ -33,8 +33,9 @@ executable typed
 
 executable typedrec
   main-is:             typedrec.hs
-  -- other-modules:       
+  build-tools: alex, happy
+  other-modules: Tokenizer, Parser 
   -- other-extensions:    
-  build-depends:       base >=4.6, parsec, readline
+  build-depends:       base >=4.6, parsec, readline, array
   -- hs-source-dirs:      
   default-language:    Haskell2010
